# ipc-boost-client-server

./: CMakeLists.txt  CMakeSettings.json  install-service.ps1  uninstall-service.ps1
client/: CMakeLists.txt  main.cpp
cmake/: dependencies.conan.cmake
server/: CMakeLists.txt  ipc-boost-server.cpp  ipc-boost-server.h  main.cpp  service.cpp
